--- a/src/appComponents/CommonModule/CommonModule.css
+++ b/src/appComponents/CommonModule/CommonModule.css
@@ -11,12 +11,12 @@
     margin-right: 15px;
 }
 
- .mapBox {
+.mapBox {
     width: 100%;
     height: 221px;
     background-color: #777777;
     margin-top: 10px;
-} 
+}
 
 .mapDetails {
     background-color: #F1F1F1;
@@ -98,8 +98,19 @@
     }
 }
 
-.mapBoxCls .map-container{
+.mapBoxCls .map-container {
     width: 100% !important;
     height: 221px !important;
     margin-top: 10px !important;
+}
+
+
+@media screen and (min-width: 320px) and (max-width: 575px) {
+    .noteBoxClass h3 {
+        font-size: 28px;
+    }
+
+    .noteBoxClass p {
+        font-size: 17px;
+    }
 }
