changes on post advert

--- a/src/appComponents/PostAdvert/PostAdvert.css
+++ b/src/appComponents/PostAdvert/PostAdvert.css
@@ -422,7 +422,7 @@
     margin-top: 0px;
     height: 40px;
     font-weight: 400;
-    line-height: 25px;
+    line-height: 28px;
     color: #FFFFFF;
     background-color: #000000;
     display: flex;
@@ -588,7 +588,9 @@
     background: #000000 !important;
     box-shadow: 2.42px 4.84px 12.1px rgb(0 0 0 / 6%) !important;
     border-radius: 7.26px !important;
-    font-weight: 500 !important;
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 25px;
 }
 
 .selectOptionPost .css-13cymwt-control {
@@ -596,7 +598,9 @@
     background: #000000 !important;
     box-shadow: 2.42px 4.84px 12.1px rgb(0 0 0 / 6%) !important;
     border-radius: 7.26px !important;
-    font-weight: 500 !important;
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 25px;
 }
 
 .selectOptionPost .css-13cymwt-control:hover {
@@ -608,7 +612,9 @@
     background: #000000 !important;
     box-shadow: 2.42px 4.84px 12.1px rgb(0 0 0 / 6%) !important;
     border-radius: 7.26px !important;
-    font-weight: 500 !important;
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 25px;
 }
 
 .selectOptionPost .css-1xz3in2-control:hover {
