--- a/src/appComponents/CommonModule/CommonModule.css
+++ b/src/appComponents/CommonModule/CommonModule.css
@@ -11,12 +11,12 @@
     margin-right: 15px;
 }
 
-.mapBox {
+/* .mapBox {
     width: 100%;
     height: 221px;
     background-color: #777777;
     margin-top: 10px;
-}
+} */
 
 .mapDetails {
     background-color: #F1F1F1;
