--- a/src/appComponents/Search/SearchBar.css
+++ b/src/appComponents/Search/SearchBar.css
@@ -55,6 +55,10 @@
     margin-bottom: 40px;
 }
 
+.searchModuleBox .marginTop {
+    margin-top: 30px;
+}
+
 @media only screen and (min-width: 1200px) {
     .searchBar {
         justify-content: flex-end;
