--- a/src/appComponents/DealModule/LatestDeals/LatestDeals.css
+++ b/src/appComponents/DealModule/LatestDeals/LatestDeals.css
@@ -18,6 +18,7 @@
     line-height: 36px;
     margin-bottom: 0px;
     padding: 12px 0px;
+    letter-spacing: -0.315px;
 }
 
 .latestDeals p {
@@ -26,6 +27,7 @@
     font-size: 19px;
     line-height: 25px;
     margin-bottom: 0px;
+    letter-spacing: -0.36px;
 }
 
 .dealSubText {
@@ -117,6 +119,7 @@ button.whatsApp svg {
 
 .dealContainer {
     padding-bottom: 15px;
+    margin-top: 23px;
 }
 
 .websiteUrl p {
