--- a/src/appComponents/Footer/Footer.css
+++ b/src/appComponents/Footer/Footer.css
@@ -1,130 +1,160 @@
 .footer {
-    background: #4C4C4C;
+  background: #4c4c4c;
 }
 
 .footerBottom {
-    background: #EF5132 !important;
-    height: 20px;
+  background: #ef5132 !important;
+  height: 20px;
 }
 
 .footerContent {
-    padding: 20px 100px;
+  padding: 20px 100px;
 }
 
 .signAfricaImg {
-    margin-top: 20px;
-    margin-bottom: 25px;
+  margin-top: 20px;
+  margin-bottom: 25px;
 }
 
 .signAfricaImg img {
-    width: 100%;
-    max-width: 235px;
+  width: 100%;
+  max-width: 235px;
 }
 
 .socialIcon img {
-    width: 30px;
-    margin-right: 6px;
-    margin-bottom: 10px;
-    cursor: pointer;
+  width: 30px;
+  margin-right: 6px;
+  margin-bottom: 10px;
+  cursor: pointer;
 }
 
 .signContent {
-    margin: 10px 0px 20px 0px;
+  margin: 10px 0px 20px 0px;
 }
 
 .signContent h6 {
-    font-size: 10px;
-    line-height: 22px;
-    letter-spacing: -0.19px;
-    color: #FFFFFF;
-    font-weight: 500px;
+  font-size: 10px;
+  line-height: 22px;
+  letter-spacing: -0.19px;
+  color: #ffffff;
+  font-weight: 500px;
 }
 
 .appStoresImg {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .appStoresImg img {
-    width: 100%;
-    max-width: 153px;
-    margin: -5px -10px;
+  width: 100%;
+  max-width: 153px;
+  margin: -5px -10px;
+}
+
+.linkHeadingWrapper {
+  display: flex;
+  justify-content: flex-end;
 }
 
 .linkHeading {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 .linkHeading h6 {
-    font-weight: 500;
-    font-size: 12px;
-    letter-spacing: -0.19px;
-    color: #FFFFFF;
+  font-weight: 500;
+  font-size: 9px;
+  letter-spacing: -0.19px;
+  color: #ffffff;
 }
 
 .linkNames {
-    margin-top: 26px;
+  margin-top: 26px;
 }
 
 .linkNames h6 {
-    font-weight: 500;
-    font-size: 9px;
-    letter-spacing: -0.19px;
-    color: #FFFFFF;
+  font-weight: 500;
+  font-size: 9px;
+  letter-spacing: -0.19px;
+  color: #ffffff;
 }
 
 .companyImg {
-    margin-top: 30px;
-    display: grid;
+  margin-top: 30px;
+  display: grid;
 }
 
 .subscribeForm {
-    margin-top: 40px;
+  margin-top: 40px;
 }
 
 .subscribeForm h5 {
-    font-weight: 700;
-    font-size: 14px;
-    letter-spacing: -0.19px;
-    color: #FFFFFF;
-    margin-bottom: 15px;
+  font-weight: 700;
+  font-size: 14px;
+  letter-spacing: -0.19px;
+  color: #ffffff;
+  margin-bottom: 15px;
 }
 
-
 .subscribeForm .form-label {
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 4px;
-    letter-spacing: -0.19px;
-    color: #FFFFFF;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 4px;
+  letter-spacing: -0.19px;
+  color: #ffffff;
 }
 
 .subscribeForm input:focus {
-    box-shadow: none;
-    border-color: #dee6eb;
+  box-shadow: none;
+  border-color: #dee6eb;
 }
 
 .subscribeForm button {
-    background: #EF5132 !important;
-    border: 1px solid #EF5132 !important;
-    border-radius: unset;
-    font-weight: 700;
-    font-size: 10px;
-    line-height: 17px;
-    letter-spacing: -0.19px;
-    color: #FFFFFF;
+  background: #ef5132 !important;
+  border: 1px solid #ef5132 !important;
+  border-radius: unset;
+  font-weight: 700;
+  font-size: 10px;
+  line-height: 17px;
+  letter-spacing: -0.19px;
+  color: #ffffff;
 }
 
 .subscribeForm .errorMsg {
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 4px;
-    letter-spacing: -0.19px;
-    color: #EF5132;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 4px;
+  letter-spacing: -0.19px;
+  color: #ef5132;
 }
 
 @media only screen and (min-width: 320px) and (max-width: 400px) {
-    .footerContent {
-        padding: 20px 76px 50px 76px;
-    }
+  .footerContent {
+    padding: 20px 76px 50px 76px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .footer .container,
+  .container-lg,
+  .container-md,
+  .container-sm,
+  .container-xl {
+    max-width: 920px !important;
+  }
+}
+
+@media (min-width: 992px) {
+  .footer .container,
+  .container-lg,
+  .container-md,
+  .container-sm {
+    max-width: 840px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .linkHeadingWrapper {
+    display: flex;
+    justify-content: flex-start;
+  }
 }
