manage desiging issues of deals and profile module

--- a/src/appComponents/DealModule/LatestDeals/LatestDeals.css
+++ b/src/appComponents/DealModule/LatestDeals/LatestDeals.css
@@ -28,6 +28,7 @@
     line-height: 25px;
     margin-bottom: 0px;
     letter-spacing: -0.36px;
+    font-family: 'Nunito Sans';
 }
 
 .dealSubText {
@@ -38,8 +39,8 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    padding-top: 8px;
-    padding-bottom: 8px;
+    padding-top: 6px;
+    padding-bottom: 6px;
 }
 
 .latestDeals button {
@@ -66,14 +67,20 @@
 }
 
 .dealText p {
-    font-size: 18px;
-    line-height: 20px;
     line-break: anywhere;
+    line-height: 20px;
+    font-size: 18px;
+    color: #000000;
+    letter-spacing: -0.61875px;
+    font-weight: 400;
+    font-family: 'Poppins';
 }
 
 .dealText span {
     font-size: 11px;
     color: #828282;
+    font-weight: 500;
+    line-height: 16px;
 }
 
 .dealPrice {
@@ -94,6 +101,7 @@
     font-weight: 300;
     font-size: 12px;
     color: #000000;
+    line-height: 18px;
 }
 
 .whatsApp {
@@ -125,7 +133,11 @@ button.whatsApp svg {
 .websiteUrl p {
     line-break: anywhere;
     line-height: 20px;
-    font-size: 17px;
+    font-size: 18px;
+    color: #000000;
+    letter-spacing: -0.61875px;
+    font-weight: 400;
+    font-family: 'Poppins';
 }
 
 .stickyClass {
