--- a/src/appComponents/CommonModule/CommonModule.css
+++ b/src/appComponents/CommonModule/CommonModule.css
@@ -11,18 +11,11 @@
     margin-right: 15px;
 }
 
-/* .mapBox {
-    width: 100%;
-    height: 221px;
-    background-color: #777777;
-    margin-top: 10px;
-} */
-
 .mapDetails {
     background-color: #F1F1F1;
     display: flex;
     align-items: center;
-    padding: 12px 15px;
+    padding: 24px 15px;
 }
 
 .mapDetails h5 {
@@ -34,9 +27,10 @@
 }
 
 .mapDetails p {
-    font-weight: 400;
-    font-size: 14.3px;
-    line-height: 17px;
+    font-weight: 400 !important;
+    font-size: 14.3px !important;
+    line-height: 17px !important;
+    color: #000000;
 }
 
 .mapDetails img {
@@ -65,9 +59,9 @@
 }
 
 .mapLocationSet p {
-    font-weight: 400;
+    font-weight: 400 !important;
     font-size: 14.3px !important;
-    line-height: 17px;
+    line-height: 17px !important;
     /* line-break: unset; */
 }
 
@@ -78,7 +72,8 @@
     color: #FFFFFF;
     background: #000000;
     border-radius: 14px;
-    padding: 30px;
+    padding: 28px 29px;
+    font-weight: 400;
 }
 
 .noteBoxClass h3 {
