--- a/src/appComponents/Header/Header.css
+++ b/src/appComponents/Header/Header.css
@@ -100,22 +100,23 @@
     text-align: center;
     margin-bottom: 10px;
 }
+
 .bannerImg iframe {
     width: 100%;
     height: 140px;
-    width:1px;
-    min-width:100%;
-    width:100%;
-    height:100%;
-    border:0;
+    width: 1px;
+    min-width: 100%;
+    width: 100%;
+    height: 100%;
+    border: 0;
     scroll-behavior: unset;
-    
+
 }
 
 
 
- /* back arrow button css  */
-.backarrowButton svg{
+/* back arrow button css  */
+.backarrowButton svg {
     background: #232323;
     color: white;
     border-radius: 50%;
@@ -124,4 +125,11 @@
     margin-top: 19px;
     cursor: pointer;
     margin-right: 10px;
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+    .navItem .navbar-nav .nav-link {
+        padding-right: 11px !important;
+        padding-left: 11px !important;
+    }
 }
