--- a/src/assets/styles/Common.css
+++ b/src/assets/styles/Common.css
@@ -7,6 +7,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    font-weight: 500;
+    font-size: 16px;
 }
 
 .nav-pills .nav-link,
