working on post advert

--- a/src/appComponents/PostAdvert/PostAdvert.css
+++ b/src/appComponents/PostAdvert/PostAdvert.css
@@ -666,3 +666,13 @@
 .post_AddForm #cities .css-t3ipsp-control {
     color: black !important;
 }
+
+.cropContainer {
+    position: 'relative';
+    width: '100%';
+    height: 200;
+    background: '#333';
+    /* [theme.breakpoints.up('sm')]: {
+      height: 400,
+    }, */
+  }
