--- a/src/appComponents/DealTypesModule/CompanyData.module.css
+++ b/src/appComponents/DealTypesModule/CompanyData.module.css
@@ -30,7 +30,7 @@
     margin-top: 10px;
     padding: 20px;
     display: flex;
-    align-items: center; 
+    align-items: center;
     cursor: pointer;
 }
 
@@ -58,6 +58,10 @@
     line-height: 18px;
     color: #000000;
     margin-bottom: 4px;
+    /* width: 294px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis; */
 }
 
 .productDiscription h5 {
